ImOObiliaria/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/lib/jvm/java-8-oracle/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/usr/share/bluej/bluejcore.jar:/usr/share/bluej/junit-4.8.2.jar:/usr/share/bluej/userlib/pi4j-core.jar:/usr/share/bluej/userlib/pi4j-service.jar:/usr/share/bluej/userlib/pi4j-gpio-extension.jar:/usr/share/bluej/userlib/pi4j-device.jar:/home/sergio/GitProjects/ProjetoPOO/ImOObiliaria
-d
/home/sergio/GitProjects/ProjetoPOO/ImOObiliaria/doc
-encoding
windows-1252
-charset
windows-1252
-docletpath
/usr/share/bluej/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/home/sergio/GitProjects/ProjetoPOO/ImOObiliaria/Imobiliaria.java
<---- end of javadoc command ---->
Loading source file /home/sergio/GitProjects/ProjetoPOO/ImOObiliaria/Imobiliaria.java...
/home/sergio/GitProjects/ProjetoPOO/ImOObiliaria/Imobiliaria.java:288: error: illegal start of expression
                System.out.println("-- Vendedor " +vendedorAux.getNome() + " com o user name "+vendedorAux.getEmail()+ " tem em venda os Imóveis:" + );
                                                                                                                                                     ^
1 error
